# BE_Epharmacy

epharmacy/: manage.py  pyproject.toml
epharmacy/epharmacy/: asgi.py  settings.py  urls.py  wsgi.py
epharmacy/my_project/: pyproject.toml
epharmacy/pharmacy/: admin.py  models.py  serializer.py  urls.py  views.py
epharmacy/pharmacy/migrations/: 0001_initial.py  0002_cart_user.py  0002_medicine_image.py  0003_alter_medicine_content_alter_medicine_price_and_more.py  0003_rename_id_medicine_cart_medicine_alter_cart_price_and_more.py  0004_alter_cart_name.py  0005_alter_cart_price.py  0006_remove_cart_name_remove_cart_price_and_more.py  0007_order_phone_number_order_receiver.py  0007_remove_payment_id_payment_payment_id.py  0008_alter_order_status.py  0008_rename_id_payment_detailcart_payment.py  0009_alter_order_total_price.py  0010_alter_offerproduct_options_and_more.py  0011_remove_detailinvoice_id_invoice_and_more.py  0012_remove_order_status_order_status_id.py  0013_remove_order_status_order_status_id_delete_drugtype.py  0014_remove_order_status_medicine_subcategory_and_more.py  0015_remove_order_status_order_status_id_and_more.py  0016_remove_order_status_order_status_id_and_more.py  0017_remove_order_status_category_parent_order_status_id.py  0018_remove_medicine_subcategory_and_more.py  0019_remove_medicine_subcategory_and_more.py
epharmacy/pharmacy/templates/: index.html
