[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["tranhoaithu <tranthihoaithu1112002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
drf-yasg = "^1.21.7"
django-ckeditor = "^6.7.1"
django-oauth-toolkit = "^2.3.0"
django-cors-headers = "^4.3.1"
mysqlclient = "^2.2.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
